lib/crypto: curve25519-hacl64: Fix older clang KASAN workaround for GCC (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12108,6 +12108,7 @@
 	patches.kernel.org/6.12.58-549-drm-amdgpu-smu-Handle-S0ix-for-vangogh.patch
 	patches.kernel.org/6.12.58-550-drm-amd-display-Fix-NULL-deref-in-debugfs-odm.patch
 	patches.kernel.org/6.12.58-551-virtio-net-fix-received-length-check-in-big-p.patch
+	patches.kernel.org/6.12.58-552-lib-crypto-curve25519-hacl64-Fix-older-clang-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
