selftests: traceroute: Return correct value on failure (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11892,6 +11892,7 @@
 	patches.kernel.org/6.12.58-333-selftests-net-replace-sleeps-in-fcnal-test-wi.patch
 	patches.kernel.org/6.12.58-334-media-redrat3-use-int-type-to-store-negative-.patch
 	patches.kernel.org/6.12.58-335-selftests-traceroute-Use-require_command.patch
+	patches.kernel.org/6.12.58-336-selftests-traceroute-Return-correct-value-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
