scsi: ufs: core: Disable timestamp functionality if not supported (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11926,6 +11926,7 @@
 	patches.kernel.org/6.12.58-367-drm-xe-guc-Return-an-error-code-if-the-GuC-lo.patch
 	patches.kernel.org/6.12.58-368-drm-amdgpu-reject-gang-submissions-under-SRIO.patch
 	patches.kernel.org/6.12.58-369-selftests-Makefile-include-INSTALL_DEP_TARGET.patch
+	patches.kernel.org/6.12.58-370-scsi-ufs-core-Disable-timestamp-functionality.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
