wifi: ath10k: Fix connection after GTK rekeying (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11951,6 +11951,7 @@
 	patches.kernel.org/6.12.58-392-net-ethernet-microchip-sparx5-make-it-selecta.patch
 	patches.kernel.org/6.12.58-393-bus-mhi-core-Improve-mhi_sync_power_up-handli.patch
 	patches.kernel.org/6.12.58-394-iommu-vt-d-Replace-snprintf-with-scnprintf-in.patch
+	patches.kernel.org/6.12.58-395-wifi-ath10k-Fix-connection-after-GTK-rekeying.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
