--- a/series.conf
+++ b/series.conf
@@ -11649,6 +11649,7 @@
 	patches.kernel.org/6.12.58-090-soc-ti-pruss-don-t-use-pK-through-printk.patch
 	patches.kernel.org/6.12.58-091-bpf-Don-t-use-pK-through-printk.patch
 	patches.kernel.org/6.12.58-092-pinctrl-single-fix-bias-pull-up-down-handling.patch
+	patches.kernel.org/6.12.58-093-mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
