RDMA/hns: Fix the modification of max_send_sge (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12012,6 +12012,7 @@
 	patches.kernel.org/6.12.58-453-RDMA-irdma-Remove-unused-struct-irdma_cq-fiel.patch
 	patches.kernel.org/6.12.58-454-RDMA-irdma-Set-irdma_cq-cq_num-field-during-C.patch
 	patches.kernel.org/6.12.58-455-RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
+	patches.kernel.org/6.12.58-456-RDMA-hns-Fix-the-modification-of-max_send_sge.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
