--- a/series.conf
+++ b/series.conf
@@ -11936,6 +11936,7 @@
 	patches.kernel.org/6.12.58-377-allow-finish_no_open-file-ERR_PTR-E.patch
 	patches.kernel.org/6.12.58-378-usb-mon-Increase-BUFF_MAX-to-64-MiB-to-suppor.patch
 	patches.kernel.org/6.12.58-379-usb-xhci-plat-Facilitate-using-autosuspend-fo.patch
+	patches.kernel.org/6.12.58-380-f2fs-fix-infinite-loop-in-__insert_extent_tre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
