selftests/net: fix out-of-order delivery of FIN in gro:tcp test (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12066,6 +12066,7 @@
 	patches.kernel.org/6.12.58-507-Bluetooth-btrtl-Fix-memory-leak-in-rtlbt_pars.patch
 	patches.kernel.org/6.12.58-508-net-dsa-tag_brcm-legacy-reorganize-functions.patch
 	patches.kernel.org/6.12.58-509-net-dsa-tag_brcm-legacy-fix-untagged-rx-on-un.patch
+	patches.kernel.org/6.12.58-510-selftests-net-fix-out-of-order-delivery-of-FI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
