drm/amdgpu: Avoid rma causes GPU duplicate reset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11733,6 +11733,7 @@
 	patches.kernel.org/6.12.58-174-drm-amd-display-Increase-AUX-Intra-Hop-Done-M.patch
 	patches.kernel.org/6.12.58-175-drm-xe-guc-Add-more-GuC-load-error-status-cod.patch
 	patches.kernel.org/6.12.58-176-drm-xe-Fix-oops-in-xe_gem_fault-when-running-.patch
+	patches.kernel.org/6.12.58-177-drm-amdgpu-Avoid-rma-causes-GPU-duplicate-res.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
