x86: uaccess: don't use runtime-const rewriting in modules (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12051,6 +12051,7 @@
 	patches.kernel.org/6.12.58-492-ceph-fix-multifs-mds-auth-caps-issue.patch
 	patches.kernel.org/6.12.58-493-x86-use-cmov-for-user-address-masking.patch
 	patches.kernel.org/6.12.58-494-x86-runtime-const-Add-the-RUNTIME_CONST_PTR-a.patch
+	patches.kernel.org/6.12.58-495-x86-uaccess-don-t-use-runtime-const-rewriting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
