wifi: rtw89: print just once for unknown C2H events (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11748,6 +11748,7 @@
 	patches.kernel.org/6.12.58-189-PCI-Disable-MSI-on-RDC-PCI-to-PCIe-bridges.patch
 	patches.kernel.org/6.12.58-190-selftests-net-Replace-non-standard-__WORDSIZE.patch
 	patches.kernel.org/6.12.58-191-selftests-net-Ensure-assert-triggers-in-psock.patch
+	patches.kernel.org/6.12.58-192-wifi-rtw89-print-just-once-for-unknown-C2H-ev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
