power: supply: qcom_battmgr: handle charging state change notifications (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11697,6 +11697,7 @@
 	patches.kernel.org/6.12.58-138-video-backlight-lp855x_bl-Set-correct-EPROM-s.patch
 	patches.kernel.org/6.12.58-139-tools-cpupower-fix-error-return-value-in-cpup.patch
 	patches.kernel.org/6.12.58-140-pmdomain-apple-Add-apple-t8103-pmgr-pwrstate.patch
+	patches.kernel.org/6.12.58-141-power-supply-qcom_battmgr-handle-charging-sta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
