--- a/series.conf
+++ b/series.conf
@@ -11880,6 +11880,7 @@
 	patches.kernel.org/6.12.58-321-scsi-ufs-host-mediatek-Enhance-recovery-on-hi.patch
 	patches.kernel.org/6.12.58-322-net-phy-marvell-Fix-88e1510-downshift-counter.patch
 	patches.kernel.org/6.12.58-323-scsi-ufs-host-mediatek-Correct-system-PM-flow.patch
+	patches.kernel.org/6.12.58-324-scsi-ufs-host-mediatek-Disable-auto-hibern8-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
