--- a/series.conf
+++ b/series.conf
@@ -11832,6 +11832,7 @@
 	patches.kernel.org/6.12.58-273-tcp-use-dst_dev_rcu-in-tcp_fastopen_active_di.patch
 	patches.kernel.org/6.12.58-274-crypto-qat-use-kcalloc-in-qat_uclo_map_objs_f.patch
 	patches.kernel.org/6.12.58-275-scsi-pm8001-Use-int-instead-of-u32-to-store-e.patch
+	patches.kernel.org/6.12.58-276-scsi-ufs-exynos-fsd-Gate-ref_clk-and-put-UFS-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
