--- a/series.conf
+++ b/series.conf
@@ -11781,6 +11781,7 @@
 	patches.kernel.org/6.12.58-222-drm-amdgpu-fix-nullptr-err-of-vm_handle_moved.patch
 	patches.kernel.org/6.12.58-223-drm-amdkfd-Handle-lack-of-READ-permissions-in.patch
 	patches.kernel.org/6.12.58-224-iio-adc-spear_adc-mask-SPEAR_ADC_STATUS-chann.patch
+	patches.kernel.org/6.12.58-225-iio-adc-imx93_adc-load-calibrated-values-even.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
