net: phy: fixed_phy: let fixed_phy_unregister free the phy_device (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11807,6 +11807,7 @@
 	patches.kernel.org/6.12.58-248-scsi-pm80xx-Fix-race-condition-caused-by-stat.patch
 	patches.kernel.org/6.12.58-249-extcon-adc-jack-Fix-wakeup-source-leaks-on-de.patch
 	patches.kernel.org/6.12.58-250-remoteproc-wkup_m3-Use-devm_pm_runtime_enable.patch
+	patches.kernel.org/6.12.58-251-net-phy-fixed_phy-let-fixed_phy_unregister-fr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
