drm/tidss: Use the crtc_* timings when programming the HW (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11753,6 +11753,7 @@
 	patches.kernel.org/6.12.58-194-drm-amdkfd-return-ENOTTY-for-unsupported-IOCT.patch
 	patches.kernel.org/6.12.58-195-media-pci-ivtv-Don-t-create-fake-v4l2_fh.patch
 	patches.kernel.org/6.12.58-196-media-amphion-Delete-v4l2_fh-synchronously-in.patch
+	patches.kernel.org/6.12.58-197-drm-tidss-Use-the-crtc_-timings-when-programm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
