--- a/series.conf
+++ b/series.conf
@@ -11980,6 +11980,7 @@
 	patches.kernel.org/6.12.58-421-accel-habanalabs-return-ENOMEM-if-less-than-r.patch
 	patches.kernel.org/6.12.58-422-accel-habanalabs-gaudi2-read-preboot-status-a.patch
 	patches.kernel.org/6.12.58-423-accel-habanalabs-support-mapping-cb-with-vmal.patch
+	patches.kernel.org/6.12.58-424-fs-ext4-change-GFP_KERNEL-to-GFP_NOFS-to-avoi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
