lan966x: Fix sleeping in atomic context (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12092,6 +12092,7 @@
 	patches.kernel.org/6.12.58-533-net-mlx5e-SHAMPO-Fix-skb-size-check-for-64K-p.patch
 	patches.kernel.org/6.12.58-534-net-wan-framer-pef2256-Switch-to-devm_mfd_add.patch
 	patches.kernel.org/6.12.58-535-net-dsa-microchip-Fix-reserved-multicast-addr.patch
+	patches.kernel.org/6.12.58-536-lan966x-Fix-sleeping-in-atomic-context.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
