--- a/series.conf
+++ b/series.conf
@@ -11955,6 +11955,7 @@
 	patches.kernel.org/6.12.58-396-wifi-mac80211-Track-NAN-interface-start-stop.patch
 	patches.kernel.org/6.12.58-397-net-intel-fm10k-Fix-parameter-idx-set-but-not.patch
 	patches.kernel.org/6.12.58-398-r8169-set-EEE-speed-down-ratio-to-1.patch
+	patches.kernel.org/6.12.58-399-PCI-cadence-Check-for-the-existence-of-cdns_p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
