dmaengine: sh: setup_xref error handling (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11834,6 +11834,7 @@
 	patches.kernel.org/6.12.58-275-scsi-pm8001-Use-int-instead-of-u32-to-store-e.patch
 	patches.kernel.org/6.12.58-276-scsi-ufs-exynos-fsd-Gate-ref_clk-and-put-UFS-.patch
 	patches.kernel.org/6.12.58-277-ptp-Limit-time-setting-of-PTP-clocks.patch
+	patches.kernel.org/6.12.58-278-dmaengine-sh-setup_xref-error-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
