--- a/series.conf
+++ b/series.conf
@@ -11956,6 +11956,7 @@
 	patches.kernel.org/6.12.58-397-net-intel-fm10k-Fix-parameter-idx-set-but-not.patch
 	patches.kernel.org/6.12.58-398-r8169-set-EEE-speed-down-ratio-to-1.patch
 	patches.kernel.org/6.12.58-399-PCI-cadence-Check-for-the-existence-of-cdns_p.patch
+	patches.kernel.org/6.12.58-400-sparc-module-Add-R_SPARC_UA64-relocation-hand.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
