--- a/series.conf
+++ b/series.conf
@@ -11643,6 +11643,7 @@
 	patches.kernel.org/6.12.58-084-s390-pci-Avoid-deadlock-between-PCI-error-rec.patch
 	patches.kernel.org/6.12.58-085-s390-Disable-ARCH_WANT_OPTIMIZE_HUGETLB_VMEMM.patch
 	patches.kernel.org/6.12.58-086-soc-aspeed-socinfo-Add-AST27xx-silicon-IDs.patch
+	patches.kernel.org/6.12.58-087-firmware-qcom-scm-preserve-assign_mem-error-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
