ntfs3: pretend $Extend records as regular files (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11881,6 +11881,7 @@
 	patches.kernel.org/6.12.58-322-net-phy-marvell-Fix-88e1510-downshift-counter.patch
 	patches.kernel.org/6.12.58-323-scsi-ufs-host-mediatek-Correct-system-PM-flow.patch
 	patches.kernel.org/6.12.58-324-scsi-ufs-host-mediatek-Disable-auto-hibern8-d.patch
+	patches.kernel.org/6.12.58-325-ntfs3-pretend-Extend-records-as-regular-files.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
