--- a/series.conf
+++ b/series.conf
@@ -12011,6 +12011,7 @@
 	patches.kernel.org/6.12.58-452-RDMA-irdma-Fix-SD-index-calculation.patch
 	patches.kernel.org/6.12.58-453-RDMA-irdma-Remove-unused-struct-irdma_cq-fiel.patch
 	patches.kernel.org/6.12.58-454-RDMA-irdma-Set-irdma_cq-cq_num-field-during-C.patch
+	patches.kernel.org/6.12.58-455-RDMA-hns-Fix-recv-CQ-and-QP-cache-affinity.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
