--- a/series.conf
+++ b/series.conf
@@ -11916,6 +11916,7 @@
 	patches.kernel.org/6.12.58-357-drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs.patch
 	patches.kernel.org/6.12.58-358-drm-amd-display-Set-up-pixel-encoding-for-YCB.patch
 	patches.kernel.org/6.12.58-359-drm-amd-display-fix-dml-ms-order-of-operation.patch
+	patches.kernel.org/6.12.58-360-drm-amd-Avoid-evicting-resources-at-S5.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
