--- a/series.conf
+++ b/series.conf
@@ -12049,6 +12049,7 @@
 	patches.kernel.org/6.12.58-490-ceph-fix-potential-race-condition-in-ceph_ioc.patch
 	patches.kernel.org/6.12.58-491-ceph-refactor-wake_up_bit-pattern-of-calling.patch
 	patches.kernel.org/6.12.58-492-ceph-fix-multifs-mds-auth-caps-issue.patch
+	patches.kernel.org/6.12.58-493-x86-use-cmov-for-user-address-masking.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
