--- a/series.conf
+++ b/series.conf
@@ -12105,6 +12105,7 @@
 	patches.kernel.org/6.12.58-546-x86-microcode-AMD-Add-more-known-models-to-en.patch
 	patches.kernel.org/6.12.58-547-smb-client-validate-change-notify-buffer-befo.patch
 	patches.kernel.org/6.12.58-548-smb-client-fix-potential-UAF-in-smb2_close_ca.patch
+	patches.kernel.org/6.12.58-549-drm-amdgpu-smu-Handle-S0ix-for-vangogh.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
