--- a/series.conf
+++ b/series.conf
@@ -12010,6 +12010,7 @@
 	patches.kernel.org/6.12.58-451-ACPICA-Update-dsmethod.c-to-get-rid-of-unused.patch
 	patches.kernel.org/6.12.58-452-RDMA-irdma-Fix-SD-index-calculation.patch
 	patches.kernel.org/6.12.58-453-RDMA-irdma-Remove-unused-struct-irdma_cq-fiel.patch
+	patches.kernel.org/6.12.58-454-RDMA-irdma-Set-irdma_cq-cq_num-field-during-C.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
