net: macb: avoid dealing with endianness in macb_set_hwaddr() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11988,6 +11988,7 @@
 	patches.kernel.org/6.12.58-429-ACPI-scan-Update-honor-list-for-RPMI-System-M.patch
 	patches.kernel.org/6.12.58-430-vfio-pci-Fix-INTx-handling-on-legacy-non-PCI-.patch
 	patches.kernel.org/6.12.58-431-net-mlx5e-Don-t-query-FEC-statistics-when-FEC.patch
+	patches.kernel.org/6.12.58-432-net-macb-avoid-dealing-with-endianness-in-mac.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
