net: sh_eth: Disable WoL if system can not suspend (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11888,6 +11888,7 @@
 	patches.kernel.org/6.12.58-329-phy-renesas-r8a779f0-ether-serdes-add-new-ste.patch
 	patches.kernel.org/6.12.58-330-phy-rockchip-phy-rockchip-inno-csidphy-allow-.patch
 	patches.kernel.org/6.12.58-331-drm-msm-registers-Generate-_HI-LO-builders-fo.patch
+	patches.kernel.org/6.12.58-332-net-sh_eth-Disable-WoL-if-system-can-not-susp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
