--- a/series.conf
+++ b/series.conf
@@ -11597,6 +11597,7 @@
 	patches.kernel.org/6.12.58-038-ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 	patches.kernel.org/6.12.58-039-libbpf-Fix-powerpc-s-stack-register-definitio.patch
 	patches.kernel.org/6.12.58-040-usbnet-Prevents-free-active-kevent.patch
+	patches.kernel.org/6.12.58-041-Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
