drm/amd/display: update color on atomic commit time (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12112,6 +12112,7 @@
 	patches.kernel.org/6.12.58-553-scsi-ufs-ufs-pci-Fix-S0ix-S3-for-Intel-contro.patch
 	patches.kernel.org/6.12.58-554-scsi-ufs-ufs-pci-Set-UFSHCD_QUIRK_PERFORM_LIN.patch
 	patches.kernel.org/6.12.58-555-scsi-ufs-core-Add-a-quirk-to-suppress-link_st.patch
+	patches.kernel.org/6.12.58-556-drm-amd-display-update-color-on-atomic-commit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
