net: ti: icssg-prueth: Fix fdb hash size configuration (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12088,6 +12088,7 @@
 	patches.kernel.org/6.12.58-529-bnxt_en-Add-a-force-parameter-to-bnxt_free_ct.patch
 	patches.kernel.org/6.12.58-530-wifi-mac80211_hwsim-Limit-destroy_on_close-ra.patch
 	patches.kernel.org/6.12.58-531-net-mlx5e-Fix-return-value-in-case-of-module-.patch
+	patches.kernel.org/6.12.58-532-net-ti-icssg-prueth-Fix-fdb-hash-size-configu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
