nvme: Use non zero KATO for persistent discovery connections (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11710,6 +11710,7 @@
 	patches.kernel.org/6.12.58-151-blk-cgroup-fix-possible-deadlock-while-config.patch
 	patches.kernel.org/6.12.58-152-riscv-bpf-Fix-uninitialized-symbol-retval_off.patch
 	patches.kernel.org/6.12.58-153-bpf-Clear-pfmemalloc-flag-when-freeing-all-fr.patch
+	patches.kernel.org/6.12.58-154-nvme-Use-non-zero-KATO-for-persistent-discove.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
