pinctrl: single: fix bias pull up/down handling in pin_config_set (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11648,6 +11648,7 @@
 	patches.kernel.org/6.12.58-089-spi-loopback-test-Don-t-use-pK-through-printk.patch
 	patches.kernel.org/6.12.58-090-soc-ti-pruss-don-t-use-pK-through-printk.patch
 	patches.kernel.org/6.12.58-091-bpf-Don-t-use-pK-through-printk.patch
+	patches.kernel.org/6.12.58-092-pinctrl-single-fix-bias-pull-up-down-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
