--- a/series.conf
+++ b/series.conf
@@ -11765,6 +11765,7 @@
 	patches.kernel.org/6.12.58-206-thunderbolt-Use-is_pciehp-instead-of-is_hotpl.patch
 	patches.kernel.org/6.12.58-207-tty-serial-ip22zilog-Use-platform-device-for-.patch
 	patches.kernel.org/6.12.58-208-powerpc-eeh-Use-result-of-error_detected-in-u.patch
+	patches.kernel.org/6.12.58-209-s390-pci-Use-pci_uevent_ers-in-PCI-recovery.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
