net: ethernet: microchip: sparx5: make it selectable for ARCH_LAN969X (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11948,6 +11948,7 @@
 	patches.kernel.org/6.12.58-389-drm-amdgpu-atom-Check-kcalloc-for-WS-buffer-i.patch
 	patches.kernel.org/6.12.58-390-ASoC-qcom-sc8280xp-explicitly-set-S16LE-forma.patch
 	patches.kernel.org/6.12.58-391-net-phy-clear-link-parameters-on-admin-link-d.patch
+	patches.kernel.org/6.12.58-392-net-ethernet-microchip-sparx5-make-it-selecta.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
