--- a/series.conf
+++ b/series.conf
@@ -11620,6 +11620,7 @@
 	patches.kernel.org/6.12.58-061-block-make-REQ_OP_ZONE_OPEN-a-write-operation.patch
 	patches.kernel.org/6.12.58-062-perf-x86-intel-Fix-KASAN-global-out-of-bounds.patch
 	patches.kernel.org/6.12.58-063-regmap-slimbus-fix-bus_context-pointer-in-reg.patch
+	patches.kernel.org/6.12.58-064-s390-mm-Fix-memory-leak-in-add_marker-when-kv.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
