--- a/series.conf
+++ b/series.conf
@@ -11922,6 +11922,7 @@
 	patches.kernel.org/6.12.58-363-drm-amd-display-dml2-Guard-dml21_map_dc_state.patch
 	patches.kernel.org/6.12.58-364-page_pool-always-add-GFP_NOWARN-for-ATOMIC-al.patch
 	patches.kernel.org/6.12.58-365-ethernet-Extend-device_get_mac_address-to-use.patch
+	patches.kernel.org/6.12.58-366-HID-i2c-hid-Resolve-touchpad-issues-on-Dell-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
