Bluetooth: btrtl: Fix memory leak in rtlbt_parse_firmware_v2() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12063,6 +12063,7 @@
 	patches.kernel.org/6.12.58-504-riscv-stacktrace-Disable-KASAN-checks-for-non.patch
 	patches.kernel.org/6.12.58-505-riscv-ptdump-use-seq_puts-in-pt_dump_seq_puts.patch
 	patches.kernel.org/6.12.58-506-Bluetooth-hci_event-validate-skb-length-for-u.patch
+	patches.kernel.org/6.12.58-507-Bluetooth-btrtl-Fix-memory-leak-in-rtlbt_pars.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
