--- a/series.conf
+++ b/series.conf
@@ -11854,6 +11854,7 @@
 	patches.kernel.org/6.12.58-295-ALSA-usb-audio-apply-quirk-for-MOONDROP-Quark.patch
 	patches.kernel.org/6.12.58-296-PCI-imx6-Enable-the-Vaux-supply-if-available.patch
 	patches.kernel.org/6.12.58-297-drm-xe-guc-Set-upper-limit-of-H2G-retries-ove.patch
+	patches.kernel.org/6.12.58-298-net-call-cond_resched-less-often-in-__release.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
