--- a/series.conf
+++ b/series.conf
@@ -12034,6 +12034,7 @@
 	patches.kernel.org/6.12.58-475-cpufreq-tegra186-Initialize-all-cores-to-max-.patch
 	patches.kernel.org/6.12.58-476-9p-sysfs_init-don-t-hardcode-error-to-ENOMEM.patch
 	patches.kernel.org/6.12.58-477-scsi-ufs-core-Include-UTP-error-in-INT_FATAL_.patch
+	patches.kernel.org/6.12.58-478-ACPI-property-Return-present-device-nodes-onl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
