--- a/series.conf
+++ b/series.conf
@@ -11666,6 +11666,7 @@
 	patches.kernel.org/6.12.58-107-irqchip-gic-v2m-Handle-Multiple-MSI-base-IRQ-.patch
 	patches.kernel.org/6.12.58-108-ACPI-PRM-Skip-handlers-with-NULL-handler_addr.patch
 	patches.kernel.org/6.12.58-109-ACPI-resource-Skip-IRQ-override-on-ASUS-Vivob.patch
+	patches.kernel.org/6.12.58-110-ACPI-scan-Add-Intel-CVS-ACPI-HIDs-to-acpi_ign.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
