clk: ti: am33xx: keep WKUP_DEBUGSS_CLKCTRL enabled (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12026,6 +12026,7 @@
 	patches.kernel.org/6.12.58-467-clk-at91-clk-master-Add-check-for-divide-by-3.patch
 	patches.kernel.org/6.12.58-468-clk-at91-clk-sam9x60-pll-force-write-to-PLL_U.patch
 	patches.kernel.org/6.12.58-469-9p-trans_fd-p9_fd_request-kick-rx-thread-if-E.patch
+	patches.kernel.org/6.12.58-470-clk-ti-am33xx-keep-WKUP_DEBUGSS_CLKCTRL-enabl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
