net: stmmac: Correctly handle Rx checksum offload errors (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11789,6 +11789,7 @@
 	patches.kernel.org/6.12.58-230-char-misc-Make-misc_register-reentry-for-misc.patch
 	patches.kernel.org/6.12.58-231-char-misc-Does-not-request-module-for-miscdev.patch
 	patches.kernel.org/6.12.58-232-net-When-removing-nexthops-don-t-call-synchro.patch
+	patches.kernel.org/6.12.58-233-net-stmmac-Correctly-handle-Rx-checksum-offlo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
