--- a/series.conf
+++ b/series.conf
@@ -11732,6 +11732,7 @@
 	patches.kernel.org/6.12.58-173-drm-amd-display-Move-setup_stream_attribute.patch
 	patches.kernel.org/6.12.58-174-drm-amd-display-Increase-AUX-Intra-Hop-Done-M.patch
 	patches.kernel.org/6.12.58-175-drm-xe-guc-Add-more-GuC-load-error-status-cod.patch
+	patches.kernel.org/6.12.58-176-drm-xe-Fix-oops-in-xe_gem_fault-when-running-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
