--- a/series.conf
+++ b/series.conf
@@ -11994,6 +11994,7 @@
 	patches.kernel.org/6.12.58-435-Bluetooth-btusb-Add-new-VID-PID-13d3-3633-for.patch
 	patches.kernel.org/6.12.58-436-Bluetooth-bcsp-receive-data-only-if-registere.patch
 	patches.kernel.org/6.12.58-437-ALSA-usb-audio-add-mono-main-switch-to-Preson.patch
+	patches.kernel.org/6.12.58-438-net-stmmac-est-Drop-frames-causing-HLBS-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
