--- a/series.conf
+++ b/series.conf
@@ -11671,6 +11671,7 @@
 	patches.kernel.org/6.12.58-112-thermal-intel-selftests-workload_hint-Mask-un.patch
 	patches.kernel.org/6.12.58-113-power-supply-qcom_battmgr-add-OOI-chemistry.patch
 	patches.kernel.org/6.12.58-114-hwmon-k10temp-Add-thermal-support-for-AMD-Fam.patch
+	patches.kernel.org/6.12.58-115-hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
