--- a/series.conf
+++ b/series.conf
@@ -11729,6 +11729,7 @@
 	patches.kernel.org/6.12.58-170-drm-amd-display-ensure-committing-streams-is-.patch
 	patches.kernel.org/6.12.58-171-drm-amdgpu-add-range-check-for-RAS-bad-page-a.patch
 	patches.kernel.org/6.12.58-172-drm-amdgpu-Check-vcn-sram-load-return-value.patch
+	patches.kernel.org/6.12.58-173-drm-amd-display-Move-setup_stream_attribute.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
