--- a/series.conf
+++ b/series.conf
@@ -12016,6 +12016,7 @@
 	patches.kernel.org/6.12.58-457-RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-aro.patch
 	patches.kernel.org/6.12.58-458-btrfs-fix-memory-leak-of-qgroup_list-in-btrfs.patch
 	patches.kernel.org/6.12.58-459-btrfs-mark-dirty-extent-range-for-out-of-boun.patch
+	patches.kernel.org/6.12.58-460-clk-qcom-gcc-ipq6018-rework-nss_port5-clock-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
