bnxt_en: Add a 'force' parameter to bnxt_free_ctx_mem() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12085,6 +12085,7 @@
 	patches.kernel.org/6.12.58-526-bnxt_en-Fix-a-possible-memory-leak-in-bnxt_pt.patch
 	patches.kernel.org/6.12.58-527-bnxt_en-Add-mem_valid-bit-to-struct-bnxt_ctx_.patch
 	patches.kernel.org/6.12.58-528-bnxt_en-Refactor-bnxt_free_ctx_mem.patch
+	patches.kernel.org/6.12.58-529-bnxt_en-Add-a-force-parameter-to-bnxt_free_ct.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
