extcon: adc-jack: Fix wakeup source leaks on device unbind (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11805,6 +11805,7 @@
 	patches.kernel.org/6.12.58-246-scsi-mpi3mr-Fix-I-O-failures-during-controlle.patch
 	patches.kernel.org/6.12.58-247-scsi-mpi3mr-Fix-controller-init-failure-on-fa.patch
 	patches.kernel.org/6.12.58-248-scsi-pm80xx-Fix-race-condition-caused-by-stat.patch
+	patches.kernel.org/6.12.58-249-extcon-adc-jack-Fix-wakeup-source-leaks-on-de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
