--- a/series.conf
+++ b/series.conf
@@ -11623,6 +11623,7 @@
 	patches.kernel.org/6.12.58-064-s390-mm-Fix-memory-leak-in-add_marker-when-kv.patch
 	patches.kernel.org/6.12.58-065-drm-xe-Do-not-wake-device-during-a-GT-reset.patch
 	patches.kernel.org/6.12.58-066-drm-sysfb-Do-not-dereference-NULL-pointer-in-.patch
+	patches.kernel.org/6.12.58-067-drm-sched-avoid-killing-parent-entity-on-chil.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
