clocksource/drivers/timer-rtl-otto: Work around dying timers (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11705,6 +11705,7 @@
 	patches.kernel.org/6.12.58-146-spi-rpc-if-Add-resume-support-for-RZ-G3E.patch
 	patches.kernel.org/6.12.58-147-ACPI-SPCR-Support-Precise-Baud-Rate-field.patch
 	patches.kernel.org/6.12.58-148-clocksource-drivers-vf-pit-Replace-raw_readl-.patch
+	patches.kernel.org/6.12.58-149-clocksource-drivers-timer-rtl-otto-Work-aroun.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
