ASoC: tlv320aic3x: Fix class-D initialization for tlv320aic3007 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11984,6 +11984,7 @@
 	patches.kernel.org/6.12.58-425-ext4-increase-IO-priority-of-fastcommit.patch
 	patches.kernel.org/6.12.58-426-amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_de.patch
 	patches.kernel.org/6.12.58-427-ASoC-stm32-sai-manage-context-in-set_sysclk-c.patch
+	patches.kernel.org/6.12.58-428-ASoC-tlv320aic3x-Fix-class-D-initialization-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
