fbcon: Set fb_display[i]->mode to NULL when the mode is released (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11559,6 +11559,7 @@
 	patches.kernel.org/6.12.57-042-Linux-6.12.57.patch
 	patches.kernel.org/6.12.58-001-NFSD-Fix-crash-in-nfsd4_read_release.patch
 	patches.kernel.org/6.12.58-002-net-usb-asix_devices-Check-return-value-of-us.patch
+	patches.kernel.org/6.12.58-003-fbcon-Set-fb_display-i-mode-to-NULL-when-the-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
