--- a/series.conf
+++ b/series.conf
@@ -11763,6 +11763,7 @@
 	patches.kernel.org/6.12.58-204-net-stmmac-Check-stmmac_hw_setup-in-stmmac_re.patch
 	patches.kernel.org/6.12.58-205-ice-Don-t-use-pK-through-printk-or-tracepoint.patch
 	patches.kernel.org/6.12.58-206-thunderbolt-Use-is_pciehp-instead-of-is_hotpl.patch
+	patches.kernel.org/6.12.58-207-tty-serial-ip22zilog-Use-platform-device-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
