fbdev: pvr2fb: Fix leftover reference to ONCHIP_NR_DMA_CHANNELS (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11567,6 +11567,7 @@
 	patches.kernel.org/6.12.58-008-fbdev-bitblit-bound-check-glyph-index-in-bit_.patch
 	patches.kernel.org/6.12.58-009-Bluetooth-rfcomm-fix-modem-control-handling.patch
 	patches.kernel.org/6.12.58-010-wifi-brcmfmac-fix-crash-while-sending-Action-.patch
+	patches.kernel.org/6.12.58-011-fbdev-pvr2fb-Fix-leftover-reference-to-ONCHIP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
