ceph: fix multifs mds auth caps issue (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12048,6 +12048,7 @@
 	patches.kernel.org/6.12.58-489-ceph-add-checking-of-wait_for_completion_kill.patch
 	patches.kernel.org/6.12.58-490-ceph-fix-potential-race-condition-in-ceph_ioc.patch
 	patches.kernel.org/6.12.58-491-ceph-refactor-wake_up_bit-pattern-of-calling.patch
+	patches.kernel.org/6.12.58-492-ceph-fix-multifs-mds-auth-caps-issue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
