--- a/series.conf
+++ b/series.conf
@@ -12086,6 +12086,7 @@
 	patches.kernel.org/6.12.58-527-bnxt_en-Add-mem_valid-bit-to-struct-bnxt_ctx_.patch
 	patches.kernel.org/6.12.58-528-bnxt_en-Refactor-bnxt_free_ctx_mem.patch
 	patches.kernel.org/6.12.58-529-bnxt_en-Add-a-force-parameter-to-bnxt_free_ct.patch
+	patches.kernel.org/6.12.58-530-wifi-mac80211_hwsim-Limit-destroy_on_close-ra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
