--- a/series.conf
+++ b/series.conf
@@ -11652,6 +11652,7 @@
 	patches.kernel.org/6.12.58-093-mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
 	patches.kernel.org/6.12.58-094-memstick-Add-timeout-to-prevent-indefinite-wa.patch
 	patches.kernel.org/6.12.58-095-cpufreq-ti-Add-support-for-AM62D2.patch
+	patches.kernel.org/6.12.58-096-bpf-Use-tnums-for-JEQ-JNE-is_branch_taken-log.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
