net/mlx5e: SHAMPO, Fix skb size check for 64K pages (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12089,6 +12089,7 @@
 	patches.kernel.org/6.12.58-530-wifi-mac80211_hwsim-Limit-destroy_on_close-ra.patch
 	patches.kernel.org/6.12.58-531-net-mlx5e-Fix-return-value-in-case-of-module-.patch
 	patches.kernel.org/6.12.58-532-net-ti-icssg-prueth-Fix-fdb-hash-size-configu.patch
+	patches.kernel.org/6.12.58-533-net-mlx5e-SHAMPO-Fix-skb-size-check-for-64K-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
