btrfs: mark dirty extent range for out of bound prealloc extents (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12015,6 +12015,7 @@
 	patches.kernel.org/6.12.58-456-RDMA-hns-Fix-the-modification-of-max_send_sge.patch
 	patches.kernel.org/6.12.58-457-RDMA-hns-Fix-wrong-WQE-data-when-QP-wraps-aro.patch
 	patches.kernel.org/6.12.58-458-btrfs-fix-memory-leak-of-qgroup_list-in-btrfs.patch
+	patches.kernel.org/6.12.58-459-btrfs-mark-dirty-extent-range-for-out-of-boun.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
