media: verisilicon: Explicitly disable selection api ioctls for decoders (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11849,6 +11849,7 @@
 	patches.kernel.org/6.12.58-290-media-adv7180-Add-missing-lock-in-suspend-cal.patch
 	patches.kernel.org/6.12.58-291-media-adv7180-Do-not-write-format-to-device-i.patch
 	patches.kernel.org/6.12.58-292-media-adv7180-Only-validate-format-in-queryst.patch
+	patches.kernel.org/6.12.58-293-media-verisilicon-Explicitly-disable-selectio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
