mfd: stmpe: Remove IRQ domain upon removal (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11719,6 +11719,7 @@
 	patches.kernel.org/6.12.58-160-tools-power-x86_energy_perf_policy-Fix-incorr.patch
 	patches.kernel.org/6.12.58-161-tools-power-x86_energy_perf_policy-Enhance-HW.patch
 	patches.kernel.org/6.12.58-162-tools-power-x86_energy_perf_policy-Prefer-dri.patch
+	patches.kernel.org/6.12.58-163-mfd-stmpe-Remove-IRQ-domain-upon-removal.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
