spi: rpc-if: Add resume support for RZ/G3E (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11702,6 +11702,7 @@
 	patches.kernel.org/6.12.58-143-cpuidle-Fail-cpuidle-device-registration-if-t.patch
 	patches.kernel.org/6.12.58-144-futex-Don-t-leak-robust_list-pointer-on-exec-.patch
 	patches.kernel.org/6.12.58-145-selftests-bpf-Fix-selftest-verifier_arena_lar.patch
+	patches.kernel.org/6.12.58-146-spi-rpc-if-Add-resume-support-for-RZ-G3E.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
