ipv6: Add sanity checks on ipv6_devconf.rpl_seg_enabled (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11842,6 +11842,7 @@
 	patches.kernel.org/6.12.58-283-drm-amdgpu-Allow-kfd-CRIU-with-no-buffer-obje.patch
 	patches.kernel.org/6.12.58-284-drm-xe-guc-Increase-GuC-crash-dump-buffer-siz.patch
 	patches.kernel.org/6.12.58-285-selftests-drv-net-rss_ctx-make-the-test-pass-.patch
+	patches.kernel.org/6.12.58-286-ipv6-Add-sanity-checks-on-ipv6_devconf.rpl_se.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
