--- a/series.conf
+++ b/series.conf
@@ -11690,6 +11690,7 @@
 	patches.kernel.org/6.12.58-131-pwm-pca9685-Use-bulk-write-to-atomicially-upd.patch
 	patches.kernel.org/6.12.58-132-ACPICA-dispatcher-Use-acpi_ds_clear_operands-.patch
 	patches.kernel.org/6.12.58-133-tee-allow-a-driver-to-allocate-a-tee_device-w.patch
+	patches.kernel.org/6.12.58-134-nvmet-fc-avoid-scheduling-association-deletio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
