--- a/series.conf
+++ b/series.conf
@@ -11608,6 +11608,7 @@
 	patches.kernel.org/6.12.58-049-tools-ynl-fix-string-attribute-length-to-incl.patch
 	patches.kernel.org/6.12.58-050-net-hns3-return-error-code-when-function-fail.patch
 	patches.kernel.org/6.12.58-051-sfc-fix-potential-memory-leak-in-efx_mae_proc.patch
+	patches.kernel.org/6.12.58-052-dpll-spec-add-missing-module-name-and-clock-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
