--- a/series.conf
+++ b/series.conf
@@ -11889,6 +11889,7 @@
 	patches.kernel.org/6.12.58-330-phy-rockchip-phy-rockchip-inno-csidphy-allow-.patch
 	patches.kernel.org/6.12.58-331-drm-msm-registers-Generate-_HI-LO-builders-fo.patch
 	patches.kernel.org/6.12.58-332-net-sh_eth-Disable-WoL-if-system-can-not-susp.patch
+	patches.kernel.org/6.12.58-333-selftests-net-replace-sleeps-in-fcnal-test-wi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
