drm/amdgpu/atom: Check kcalloc() for WS buffer in amdgpu_atom_execute_table_locked() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11945,6 +11945,7 @@
 	patches.kernel.org/6.12.58-386-IB-ipoib-Ignore-L3-master-device.patch
 	patches.kernel.org/6.12.58-387-jfs-Verify-inode-mode-when-loading-from-disk.patch
 	patches.kernel.org/6.12.58-388-jfs-fix-uninitialized-waitqueue-in-transactio.patch
+	patches.kernel.org/6.12.58-389-drm-amdgpu-atom-Check-kcalloc-for-WS-buffer-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
