iommufd: Don't overflow during division for dirty tracking (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12099,6 +12099,7 @@
 	patches.kernel.org/6.12.58-540-drm-amd-display-Enable-mst-when-it-s-detected.patch
 	patches.kernel.org/6.12.58-541-drm-sched-Fix-deadlock-in-drm_sched_entity_ki.patch
 	patches.kernel.org/6.12.58-542-Bluetooth-MGMT-Fix-OOB-access-in-parse_adv_mo.patch
+	patches.kernel.org/6.12.58-543-iommufd-Don-t-overflow-during-division-for-di.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
