soc: qcom: smem: Fix endian-unaware access of num_entries (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11644,6 +11644,7 @@
 	patches.kernel.org/6.12.58-085-s390-Disable-ARCH_WANT_OPTIMIZE_HUGETLB_VMEMM.patch
 	patches.kernel.org/6.12.58-086-soc-aspeed-socinfo-Add-AST27xx-silicon-IDs.patch
 	patches.kernel.org/6.12.58-087-firmware-qcom-scm-preserve-assign_mem-error-r.patch
+	patches.kernel.org/6.12.58-088-soc-qcom-smem-Fix-endian-unaware-access-of-nu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
