ALSA: usb-audio: fix control pipe direction (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11581,6 +11581,7 @@
 	patches.kernel.org/6.12.58-022-wifi-ath11k-add-support-for-MU-EDCA.patch
 	patches.kernel.org/6.12.58-023-wifi-ath11k-avoid-bit-operation-on-key-flags.patch
 	patches.kernel.org/6.12.58-024-drm-msm-a6xx-Fix-GMU-firmware-parser.patch
+	patches.kernel.org/6.12.58-025-ALSA-usb-audio-fix-control-pipe-direction.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
