media: uvcvideo: Use heuristic to find stream entity (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12054,6 +12054,7 @@
 	patches.kernel.org/6.12.58-495-x86-uaccess-don-t-use-runtime-const-rewriting.patch
 	patches.kernel.org/6.12.58-496-ALSA-hda-realtek-Audio-disappears-on-HP-15-fc.patch
 	patches.kernel.org/6.12.58-497-btrfs-ensure-no-dirty-metadata-is-written-bac.patch
+	patches.kernel.org/6.12.58-498-media-uvcvideo-Use-heuristic-to-find-stream-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
