--- a/series.conf
+++ b/series.conf
@@ -11606,6 +11606,7 @@
 	patches.kernel.org/6.12.58-047-Bluetooth-hci_core-Fix-tracking-of-periodic-a.patch
 	patches.kernel.org/6.12.58-048-drm-etnaviv-fix-flush-sequence-logic.patch
 	patches.kernel.org/6.12.58-049-tools-ynl-fix-string-attribute-length-to-incl.patch
+	patches.kernel.org/6.12.58-050-net-hns3-return-error-code-when-function-fail.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
