drm/xe/guc: Increase GuC crash dump buffer size (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11840,6 +11840,7 @@
 	patches.kernel.org/6.12.58-281-drm-msm-dsi-phy-Toggle-back-buffer-resync-aft.patch
 	patches.kernel.org/6.12.58-282-drm-msm-dsi-phy_7nm-Fix-missing-initial-VCO-r.patch
 	patches.kernel.org/6.12.58-283-drm-amdgpu-Allow-kfd-CRIU-with-no-buffer-obje.patch
+	patches.kernel.org/6.12.58-284-drm-xe-guc-Increase-GuC-crash-dump-buffer-siz.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
