usb: mon: Increase BUFF_MAX to 64 MiB to support multi-MB URBs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11934,6 +11934,7 @@
 	patches.kernel.org/6.12.58-375-scsi-lpfc-Define-size-of-debugfs-entry-for-xr.patch
 	patches.kernel.org/6.12.58-376-scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-P.patch
 	patches.kernel.org/6.12.58-377-allow-finish_no_open-file-ERR_PTR-E.patch
+	patches.kernel.org/6.12.58-378-usb-mon-Increase-BUFF_MAX-to-64-MiB-to-suppor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
