--- a/series.conf
+++ b/series.conf
@@ -11896,6 +11896,7 @@
 	patches.kernel.org/6.12.58-337-openrisc-Add-R_OR1K_32_PCREL-relocation-type-.patch
 	patches.kernel.org/6.12.58-338-netfilter-nf_reject-don-t-reply-to-icmp-error.patch
 	patches.kernel.org/6.12.58-339-x86-kvm-Prefer-native-qspinlock-for-dedicated.patch
+	patches.kernel.org/6.12.58-340-selftests-Disable-dad-for-ipv6-in-fcnal-test..patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
