perf/x86/intel: Fix KASAN global-out-of-bounds warning (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11618,6 +11618,7 @@
 	patches.kernel.org/6.12.58-059-ACPI-fan-Use-ACPI-handle-when-retrieving-_FST.patch
 	patches.kernel.org/6.12.58-060-block-fix-op_is_zone_mgmt-to-handle-REQ_OP_ZO.patch
 	patches.kernel.org/6.12.58-061-block-make-REQ_OP_ZONE_OPEN-a-write-operation.patch
+	patches.kernel.org/6.12.58-062-perf-x86-intel-Fix-KASAN-global-out-of-bounds.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
