--- a/series.conf
+++ b/series.conf
@@ -11908,6 +11908,7 @@
 	patches.kernel.org/6.12.58-349-crypto-ccp-Fix-incorrect-payload-size-calcula.patch
 	patches.kernel.org/6.12.58-350-crypto-caam-double-the-entropy-delay-interval.patch
 	patches.kernel.org/6.12.58-351-net-cls_cgroup-Fix-task_get_classid-during-qd.patch
+	patches.kernel.org/6.12.58-352-wifi-mt76-mt7921-Add-160MHz-beamformee-capabi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
