--- a/series.conf
+++ b/series.conf
@@ -11905,6 +11905,7 @@
 	patches.kernel.org/6.12.58-346-watchdog-s3c2410_wdt-Fix-max_timeout-being-ca.patch
 	patches.kernel.org/6.12.58-347-crypto-sun8i-ce-remove-channel-timeout-field.patch
 	patches.kernel.org/6.12.58-348-PCI-dwc-Verify-the-single-eDMA-IRQ-in-dw_pcie.patch
+	patches.kernel.org/6.12.58-349-crypto-ccp-Fix-incorrect-payload-size-calcula.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
