Bluetooth: btmtksdio: Add pmctrl handling for BT closed state during reset (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11600,6 +11600,7 @@
 	patches.kernel.org/6.12.58-041-Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_d.patch
 	patches.kernel.org/6.12.58-042-Bluetooth-ISO-Update-hci_conn_hash_lookup_big.patch
 	patches.kernel.org/6.12.58-043-Bluetooth-ISO-Fix-BIS-connection-dst_type-han.patch
+	patches.kernel.org/6.12.58-044-Bluetooth-btmtksdio-Add-pmctrl-handling-for-B.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
