--- a/series.conf
+++ b/series.conf
@@ -12109,6 +12109,7 @@
 	patches.kernel.org/6.12.58-550-drm-amd-display-Fix-NULL-deref-in-debugfs-odm.patch
 	patches.kernel.org/6.12.58-551-virtio-net-fix-received-length-check-in-big-p.patch
 	patches.kernel.org/6.12.58-552-lib-crypto-curve25519-hacl64-Fix-older-clang-.patch
+	patches.kernel.org/6.12.58-553-scsi-ufs-ufs-pci-Fix-S0ix-S3-for-Intel-contro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
