ACPI: SPCR: Support Precise Baud Rate field (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11703,6 +11703,7 @@
 	patches.kernel.org/6.12.58-144-futex-Don-t-leak-robust_list-pointer-on-exec-.patch
 	patches.kernel.org/6.12.58-145-selftests-bpf-Fix-selftest-verifier_arena_lar.patch
 	patches.kernel.org/6.12.58-146-spi-rpc-if-Add-resume-support-for-RZ-G3E.patch
+	patches.kernel.org/6.12.58-147-ACPI-SPCR-Support-Precise-Baud-Rate-field.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
