--- a/series.conf
+++ b/series.conf
@@ -11986,6 +11986,7 @@
 	patches.kernel.org/6.12.58-427-ASoC-stm32-sai-manage-context-in-set_sysclk-c.patch
 	patches.kernel.org/6.12.58-428-ASoC-tlv320aic3x-Fix-class-D-initialization-f.patch
 	patches.kernel.org/6.12.58-429-ACPI-scan-Update-honor-list-for-RPMI-System-M.patch
+	patches.kernel.org/6.12.58-430-vfio-pci-Fix-INTx-handling-on-legacy-non-PCI-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
