--- a/series.conf
+++ b/series.conf
@@ -12031,6 +12031,7 @@
 	patches.kernel.org/6.12.58-472-clk-clocking-wizard-Fix-output-clock-register.patch
 	patches.kernel.org/6.12.58-473-NTB-epf-Allow-arbitrary-BAR-mapping.patch
 	patches.kernel.org/6.12.58-474-9p-fix-sys-fs-9p-caches-overwriting-itself.patch
+	patches.kernel.org/6.12.58-475-cpufreq-tegra186-Initialize-all-cores-to-max-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
