--- a/series.conf
+++ b/series.conf
@@ -11657,6 +11657,7 @@
 	patches.kernel.org/6.12.58-098-irqchip-sifive-plic-Respect-mask-state-when-s.patch
 	patches.kernel.org/6.12.58-099-io_uring-zctx-check-chained-notif-contexts.patch
 	patches.kernel.org/6.12.58-100-ACPI-sysfs-Use-ACPI_FREE-for-freeing-an-ACPI-.patch
+	patches.kernel.org/6.12.58-101-ACPI-video-force-native-for-Lenovo-82K8.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
