--- a/series.conf
+++ b/series.conf
@@ -11989,6 +11989,7 @@
 	patches.kernel.org/6.12.58-430-vfio-pci-Fix-INTx-handling-on-legacy-non-PCI-.patch
 	patches.kernel.org/6.12.58-431-net-mlx5e-Don-t-query-FEC-statistics-when-FEC.patch
 	patches.kernel.org/6.12.58-432-net-macb-avoid-dealing-with-endianness-in-mac.patch
+	patches.kernel.org/6.12.58-433-Bluetooth-btusb-Check-for-unexpected-bytes-wh.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
