--- a/series.conf
+++ b/series.conf
@@ -11820,6 +11820,7 @@
 	patches.kernel.org/6.12.58-261-ASoC-SOF-ipc4-pcm-Add-fixup-for-channels.patch
 	patches.kernel.org/6.12.58-262-drm-amd-display-Increase-minimum-clock-for-TM.patch
 	patches.kernel.org/6.12.58-263-drm-amd-display-incorrect-conditions-for-fail.patch
+	patches.kernel.org/6.12.58-264-drm-amdgpu-Avoid-vcn-v5.0.1-poison-irq-call-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
