--- a/series.conf
+++ b/series.conf
@@ -11886,6 +11886,7 @@
 	patches.kernel.org/6.12.58-327-phy-cadence-cdns-dphy-Enable-lower-resolution.patch
 	patches.kernel.org/6.12.58-328-Fix-access-to-video_is_primary_device-when-co.patch
 	patches.kernel.org/6.12.58-329-phy-renesas-r8a779f0-ether-serdes-add-new-ste.patch
+	patches.kernel.org/6.12.58-330-phy-rockchip-phy-rockchip-inno-csidphy-allow-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
