--- a/series.conf
+++ b/series.conf
@@ -11659,6 +11659,7 @@
 	patches.kernel.org/6.12.58-100-ACPI-sysfs-Use-ACPI_FREE-for-freeing-an-ACPI-.patch
 	patches.kernel.org/6.12.58-101-ACPI-video-force-native-for-Lenovo-82K8.patch
 	patches.kernel.org/6.12.58-102-libbpf-Fix-USDT-SIB-argument-handling-causing.patch
+	patches.kernel.org/6.12.58-103-selftests-bpf-Fix-bpf_prog_detach2-usage-in-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
