drm/amdgpu: Check vcn sram load return value (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11728,6 +11728,7 @@
 	patches.kernel.org/6.12.58-169-drm-amd-display-fix-condition-for-setting-tim.patch
 	patches.kernel.org/6.12.58-170-drm-amd-display-ensure-committing-streams-is-.patch
 	patches.kernel.org/6.12.58-171-drm-amdgpu-add-range-check-for-RAS-bad-page-a.patch
+	patches.kernel.org/6.12.58-172-drm-amdgpu-Check-vcn-sram-load-return-value.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
