--- a/series.conf
+++ b/series.conf
@@ -11845,6 +11845,7 @@
 	patches.kernel.org/6.12.58-286-ipv6-Add-sanity-checks-on-ipv6_devconf.rpl_se.patch
 	patches.kernel.org/6.12.58-287-drm-panthor-check-bo-offset-alignment-in-vm-b.patch
 	patches.kernel.org/6.12.58-288-drm-panel-backlight-quirks-Make-EDID-match-op.patch
+	patches.kernel.org/6.12.58-289-net-nfc-nci-Increase-NCI_DATA_TIMEOUT-to-3000.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
