net: dsa: tag_brcm: legacy: reorganize functions (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12064,6 +12064,7 @@
 	patches.kernel.org/6.12.58-505-riscv-ptdump-use-seq_puts-in-pt_dump_seq_puts.patch
 	patches.kernel.org/6.12.58-506-Bluetooth-hci_event-validate-skb-length-for-u.patch
 	patches.kernel.org/6.12.58-507-Bluetooth-btrtl-Fix-memory-leak-in-rtlbt_pars.patch
+	patches.kernel.org/6.12.58-508-net-dsa-tag_brcm-legacy-reorganize-functions.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
