amd/amdkfd: resolve a race in amdgpu_amdkfd_device_fini_sw (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11982,6 +11982,7 @@
 	patches.kernel.org/6.12.58-423-accel-habanalabs-support-mapping-cb-with-vmal.patch
 	patches.kernel.org/6.12.58-424-fs-ext4-change-GFP_KERNEL-to-GFP_NOFS-to-avoi.patch
 	patches.kernel.org/6.12.58-425-ext4-increase-IO-priority-of-fastcommit.patch
+	patches.kernel.org/6.12.58-426-amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
