--- a/series.conf
+++ b/series.conf
@@ -11682,6 +11682,7 @@
 	patches.kernel.org/6.12.58-123-arm64-zynqmp-Disable-coresight-by-default.patch
 	patches.kernel.org/6.12.58-124-arm64-zynqmp-Revert-usb-node-drive-strength-a.patch
 	patches.kernel.org/6.12.58-125-soc-tegra-fuse-Add-Tegra114-nvmem-cells-and-f.patch
+	patches.kernel.org/6.12.58-126-ARM-tegra-p880-set-correct-touchscreen-clippi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
