net: dsa: b53: fix enabling ip multicast (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12074,6 +12074,7 @@
 	patches.kernel.org/6.12.58-515-gpiolib-fix-invalid-pointer-access-in-debugfs.patch
 	patches.kernel.org/6.12.58-516-net-dsa-b53-fix-resetting-speed-and-pause-on-.patch
 	patches.kernel.org/6.12.58-517-net-dsa-b53-fix-bcm63xx-RGMII-port-link-adjus.patch
+	patches.kernel.org/6.12.58-518-net-dsa-b53-fix-enabling-ip-multicast.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
