--- a/series.conf
+++ b/series.conf
@@ -12008,6 +12008,7 @@
 	patches.kernel.org/6.12.58-449-char-misc-restrict-the-dynamic-range-to-exclu.patch
 	patches.kernel.org/6.12.58-450-drm-amd-display-Add-fallback-path-for-YCBCR42.patch
 	patches.kernel.org/6.12.58-451-ACPICA-Update-dsmethod.c-to-get-rid-of-unused.patch
+	patches.kernel.org/6.12.58-452-RDMA-irdma-Fix-SD-index-calculation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
