exfat: limit log print for IO error (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11995,6 +11995,7 @@
 	patches.kernel.org/6.12.58-436-Bluetooth-bcsp-receive-data-only-if-registere.patch
 	patches.kernel.org/6.12.58-437-ALSA-usb-audio-add-mono-main-switch-to-Preson.patch
 	patches.kernel.org/6.12.58-438-net-stmmac-est-Drop-frames-causing-HLBS-error.patch
+	patches.kernel.org/6.12.58-439-exfat-limit-log-print-for-IO-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
