--- a/series.conf
+++ b/series.conf
@@ -11767,6 +11767,7 @@
 	patches.kernel.org/6.12.58-208-powerpc-eeh-Use-result-of-error_detected-in-u.patch
 	patches.kernel.org/6.12.58-209-s390-pci-Use-pci_uevent_ers-in-PCI-recovery.patch
 	patches.kernel.org/6.12.58-210-bridge-Redirect-to-backup-port-when-port-is-a.patch
+	patches.kernel.org/6.12.58-211-scsi-ufs-host-mediatek-Fix-auto-hibern8-timer.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
