--- a/series.conf
+++ b/series.conf
@@ -11912,6 +11912,7 @@
 	patches.kernel.org/6.12.58-353-wifi-mt76-mt7996-Temporarily-disable-EPCS.patch
 	patches.kernel.org/6.12.58-354-wifi-mt76-mt76_eeprom_override-to-int.patch
 	patches.kernel.org/6.12.58-355-ALSA-serial-generic-remove-shared-static-buff.patch
+	patches.kernel.org/6.12.58-356-wifi-mt76-mt7996-fix-memory-leak-on-mt7996_mc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
