firewire: ohci: move self_id_complete tracepoint after validating register (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11653,6 +11653,7 @@
 	patches.kernel.org/6.12.58-094-memstick-Add-timeout-to-prevent-indefinite-wa.patch
 	patches.kernel.org/6.12.58-095-cpufreq-ti-Add-support-for-AM62D2.patch
 	patches.kernel.org/6.12.58-096-bpf-Use-tnums-for-JEQ-JNE-is_branch_taken-log.patch
+	patches.kernel.org/6.12.58-097-firewire-ohci-move-self_id_complete-tracepoin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
