--- a/series.conf
+++ b/series.conf
@@ -11962,6 +11962,7 @@
 	patches.kernel.org/6.12.58-403-crypto-hisilicon-qm-invalidate-queues-in-use.patch
 	patches.kernel.org/6.12.58-404-crypto-hisilicon-qm-clear-all-VF-configuratio.patch
 	patches.kernel.org/6.12.58-405-PCI-PM-Skip-resuming-to-D0-if-device-is-disco.patch
+	patches.kernel.org/6.12.58-406-selftests-forwarding-Reorder-ar-ping-argument.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
