drm/amd/display: add more cyan skillfish devices (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11736,6 +11736,7 @@
 	patches.kernel.org/6.12.58-177-drm-amdgpu-Avoid-rma-causes-GPU-duplicate-res.patch
 	patches.kernel.org/6.12.58-178-drm-amd-amdgpu-Release-xcp-drm-memory-after-u.patch
 	patches.kernel.org/6.12.58-179-drm-amdgpu-Skip-poison-aca-bank-from-UE-chann.patch
+	patches.kernel.org/6.12.58-180-drm-amd-display-add-more-cyan-skillfish-devic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
