--- a/series.conf
+++ b/series.conf
@@ -11614,6 +11614,7 @@
 	patches.kernel.org/6.12.58-055-drm-radeon-Remove-calls-to-drm_put_dev.patch
 	patches.kernel.org/6.12.58-056-drm-amd-pm-fix-smu-table-id-bound-check-issue.patch
 	patches.kernel.org/6.12.58-057-drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkL.patch
+	patches.kernel.org/6.12.58-058-drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkL.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
