--- a/series.conf
+++ b/series.conf
@@ -12097,6 +12097,7 @@
 	patches.kernel.org/6.12.58-538-net-bridge-fix-MST-static-key-usage.patch
 	patches.kernel.org/6.12.58-539-tracing-Fix-memory-leaks-in-create_field_var.patch
 	patches.kernel.org/6.12.58-540-drm-amd-display-Enable-mst-when-it-s-detected.patch
+	patches.kernel.org/6.12.58-541-drm-sched-Fix-deadlock-in-drm_sched_entity_ki.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
