wifi: rtw89: wow: remove notify during WoWLAN net-detect (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11783,6 +11783,7 @@
 	patches.kernel.org/6.12.58-224-iio-adc-spear_adc-mask-SPEAR_ADC_STATUS-chann.patch
 	patches.kernel.org/6.12.58-225-iio-adc-imx93_adc-load-calibrated-values-even.patch
 	patches.kernel.org/6.12.58-226-usb-gadget-f_ncm-Fix-MAC-assignment-NCM-ether.patch
+	patches.kernel.org/6.12.58-227-wifi-rtw89-wow-remove-notify-during-WoWLAN-ne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
