--- a/series.conf
+++ b/series.conf
@@ -11885,6 +11885,7 @@
 	patches.kernel.org/6.12.58-326-wifi-mac80211-Fix-HE-capabilities-element-che.patch
 	patches.kernel.org/6.12.58-327-phy-cadence-cdns-dphy-Enable-lower-resolution.patch
 	patches.kernel.org/6.12.58-328-Fix-access-to-video_is_primary_device-when-co.patch
+	patches.kernel.org/6.12.58-329-phy-renesas-r8a779f0-ether-serdes-add-new-ste.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
