--- a/series.conf
+++ b/series.conf
@@ -11572,6 +11572,7 @@
 	patches.kernel.org/6.12.58-013-mptcp-drop-bogus-optimization-in-__mptcp_chec.patch
 	patches.kernel.org/6.12.58-014-mptcp-restore-window-probe.patch
 	patches.kernel.org/6.12.58-015-ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
+	patches.kernel.org/6.12.58-016-s390-pci-Restore-IRQ-unconditionally-for-the-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
