--- a/series.conf
+++ b/series.conf
@@ -11641,6 +11641,7 @@
 	patches.kernel.org/6.12.58-082-drm-sched-Re-group-and-rename-the-entity-run-.patch
 	patches.kernel.org/6.12.58-083-drm-sched-Fix-race-in-drm_sched_entity_select.patch
 	patches.kernel.org/6.12.58-084-s390-pci-Avoid-deadlock-between-PCI-error-rec.patch
+	patches.kernel.org/6.12.58-085-s390-Disable-ARCH_WANT_OPTIMIZE_HUGETLB_VMEMM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
