--- a/series.conf
+++ b/series.conf
@@ -11655,6 +11655,7 @@
 	patches.kernel.org/6.12.58-096-bpf-Use-tnums-for-JEQ-JNE-is_branch_taken-log.patch
 	patches.kernel.org/6.12.58-097-firewire-ohci-move-self_id_complete-tracepoin.patch
 	patches.kernel.org/6.12.58-098-irqchip-sifive-plic-Respect-mask-state-when-s.patch
+	patches.kernel.org/6.12.58-099-io_uring-zctx-check-chained-notif-contexts.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
