--- a/series.conf
+++ b/series.conf
@@ -11664,6 +11664,7 @@
 	patches.kernel.org/6.12.58-105-arc-Fix-__fls-const-foldability-via-__builtin.patch
 	patches.kernel.org/6.12.58-106-selftests-bpf-Upon-failures-exit-with-code-1-.patch
 	patches.kernel.org/6.12.58-107-irqchip-gic-v2m-Handle-Multiple-MSI-base-IRQ-.patch
+	patches.kernel.org/6.12.58-108-ACPI-PRM-Skip-handlers-with-NULL-handler_addr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
