--- a/series.conf
+++ b/series.conf
@@ -11987,6 +11987,7 @@
 	patches.kernel.org/6.12.58-428-ASoC-tlv320aic3x-Fix-class-D-initialization-f.patch
 	patches.kernel.org/6.12.58-429-ACPI-scan-Update-honor-list-for-RPMI-System-M.patch
 	patches.kernel.org/6.12.58-430-vfio-pci-Fix-INTx-handling-on-legacy-non-PCI-.patch
+	patches.kernel.org/6.12.58-431-net-mlx5e-Don-t-query-FEC-statistics-when-FEC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
