drm/amdkfd: Tie UNMAP_LATENCY to queue_preemption (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11812,6 +11812,7 @@
 	patches.kernel.org/6.12.58-253-drm-amdgpu-Correct-the-counts-of-nr_banks-and.patch
 	patches.kernel.org/6.12.58-254-drm-amdkfd-fix-vram-allocation-failure-for-a-.patch
 	patches.kernel.org/6.12.58-255-drm-amd-display-Support-HW-cursor-180-rot-for.patch
+	patches.kernel.org/6.12.58-256-drm-amdkfd-Tie-UNMAP_LATENCY-to-queue_preempt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
