--- a/series.conf
+++ b/series.conf
@@ -11848,6 +11848,7 @@
 	patches.kernel.org/6.12.58-289-net-nfc-nci-Increase-NCI_DATA_TIMEOUT-to-3000.patch
 	patches.kernel.org/6.12.58-290-media-adv7180-Add-missing-lock-in-suspend-cal.patch
 	patches.kernel.org/6.12.58-291-media-adv7180-Do-not-write-format-to-device-i.patch
+	patches.kernel.org/6.12.58-292-media-adv7180-Only-validate-format-in-queryst.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
