--- a/series.conf
+++ b/series.conf
@@ -11967,6 +11967,7 @@
 	patches.kernel.org/6.12.58-408-wifi-ath12k-Increase-DP_REO_CMD_RING_SIZE-to-.patch
 	patches.kernel.org/6.12.58-409-net-dsa-microchip-Set-SPI-as-bus-interface-du.patch
 	patches.kernel.org/6.12.58-410-drm-amd-display-Add-AVI-infoframe-copy-in-cop.patch
+	patches.kernel.org/6.12.58-411-drm-amd-display-Init-dispclk-from-bootup-cloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
