drm/amdkfd: Fix mmap write lock not release (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12044,6 +12044,7 @@
 	patches.kernel.org/6.12.58-485-net-wwan-t7xx-add-support-for-HP-DRMR-H01.patch
 	patches.kernel.org/6.12.58-486-kbuild-uapi-Strip-comments-before-size-type-c.patch
 	patches.kernel.org/6.12.58-487-ASoC-meson-aiu-encoder-i2s-fix-bit-clock-pola.patch
+	patches.kernel.org/6.12.58-488-drm-amdkfd-Fix-mmap-write-lock-not-release.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
