9p: fix /sys/fs/9p/caches overwriting itself (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12030,6 +12030,7 @@
 	patches.kernel.org/6.12.58-471-clk-scmi-Add-duty-cycle-ops-only-when-duty-cy.patch
 	patches.kernel.org/6.12.58-472-clk-clocking-wizard-Fix-output-clock-register.patch
 	patches.kernel.org/6.12.58-473-NTB-epf-Allow-arbitrary-BAR-mapping.patch
+	patches.kernel.org/6.12.58-474-9p-fix-sys-fs-9p-caches-overwriting-itself.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
