cpufreq: ondemand: Update the efficient idle check for Intel extended Families (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11678,6 +11678,7 @@
 	patches.kernel.org/6.12.58-119-power-supply-sbs-charger-Support-multiple-dev.patch
 	patches.kernel.org/6.12.58-120-hwmon-sy7636a-add-alias.patch
 	patches.kernel.org/6.12.58-121-irqchip-loongson-pch-lpc-Use-legacy-domain-fo.patch
+	patches.kernel.org/6.12.58-122-cpufreq-ondemand-Update-the-efficient-idle-ch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
