--- a/series.conf
+++ b/series.conf
@@ -11717,6 +11717,7 @@
 	patches.kernel.org/6.12.58-158-tools-cpupower-Fix-incorrect-size-in-cpuidle_.patch
 	patches.kernel.org/6.12.58-159-selftests-bpf-Fix-flaky-bpf_cookie-selftest.patch
 	patches.kernel.org/6.12.58-160-tools-power-x86_energy_perf_policy-Fix-incorr.patch
+	patches.kernel.org/6.12.58-161-tools-power-x86_energy_perf_policy-Enhance-HW.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
