usb: xhci-pci: add support for hosts with zero USB3 ports (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11939,6 +11939,7 @@
 	patches.kernel.org/6.12.58-380-f2fs-fix-infinite-loop-in-__insert_extent_tre.patch
 	patches.kernel.org/6.12.58-381-wifi-rtw89-obtain-RX-path-from-ppdu-status-IE.patch
 	patches.kernel.org/6.12.58-382-wifi-rtw89-renew-a-completion-for-each-H2C-co.patch
+	patches.kernel.org/6.12.58-383-usb-xhci-pci-add-support-for-hosts-with-zero-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
