drm/amdgpu/jpeg: Hold pg_lock before jpeg poweroff (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11740,6 +11740,7 @@
 	patches.kernel.org/6.12.58-181-drm-amd-display-update-dpp-disp-clock-from-sm.patch
 	patches.kernel.org/6.12.58-182-drm-amd-pm-Use-cached-metrics-data-on-aldebar.patch
 	patches.kernel.org/6.12.58-183-drm-amd-pm-Use-cached-metrics-data-on-arcturu.patch
+	patches.kernel.org/6.12.58-184-drm-amdgpu-jpeg-Hold-pg_lock-before-jpeg-powe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
