--- a/series.conf
+++ b/series.conf
@@ -12033,6 +12033,7 @@
 	patches.kernel.org/6.12.58-474-9p-fix-sys-fs-9p-caches-overwriting-itself.patch
 	patches.kernel.org/6.12.58-475-cpufreq-tegra186-Initialize-all-cores-to-max-.patch
 	patches.kernel.org/6.12.58-476-9p-sysfs_init-don-t-hardcode-error-to-ENOMEM.patch
+	patches.kernel.org/6.12.58-477-scsi-ufs-core-Include-UTP-error-in-INT_FATAL_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
