--- a/series.conf
+++ b/series.conf
@@ -11838,6 +11838,7 @@
 	patches.kernel.org/6.12.58-279-dmaengine-mv_xor-match-alloc_wc-and-free_wc.patch
 	patches.kernel.org/6.12.58-280-dmaengine-dw-edma-Set-status-for-callback_res.patch
 	patches.kernel.org/6.12.58-281-drm-msm-dsi-phy-Toggle-back-buffer-resync-aft.patch
+	patches.kernel.org/6.12.58-282-drm-msm-dsi-phy_7nm-Fix-missing-initial-VCO-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
