--- a/series.conf
+++ b/series.conf
@@ -11669,6 +11669,7 @@
 	patches.kernel.org/6.12.58-110-ACPI-scan-Add-Intel-CVS-ACPI-HIDs-to-acpi_ign.patch
 	patches.kernel.org/6.12.58-111-thermal-gov_step_wise-Allow-cooling-level-to-.patch
 	patches.kernel.org/6.12.58-112-thermal-intel-selftests-workload_hint-Mask-un.patch
+	patches.kernel.org/6.12.58-113-power-supply-qcom_battmgr-add-OOI-chemistry.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
