--- a/series.conf
+++ b/series.conf
@@ -11801,6 +11801,7 @@
 	patches.kernel.org/6.12.58-242-net-wangxun-limit-tx_max_coalesced_frames_irq.patch
 	patches.kernel.org/6.12.58-243-media-ipu6-isys-Set-embedded-data-type-correc.patch
 	patches.kernel.org/6.12.58-244-rpmsg-char-Export-alias-for-RPMSG-ID-rpmsg-ra.patch
+	patches.kernel.org/6.12.58-245-net-ipv4-allow-directed-broadcast-routes-to-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
