ACPICA: Update dsmethod.c to get rid of unused variable warning (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12007,6 +12007,7 @@
 	patches.kernel.org/6.12.58-448-usb-xhci-pci-Fix-USB2-only-root-hub-registrat.patch
 	patches.kernel.org/6.12.58-449-char-misc-restrict-the-dynamic-range-to-exclu.patch
 	patches.kernel.org/6.12.58-450-drm-amd-display-Add-fallback-path-for-YCBCR42.patch
+	patches.kernel.org/6.12.58-451-ACPICA-Update-dsmethod.c-to-get-rid-of-unused.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
