ASoC: fsl_sai: fix bit order for DSD format (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11594,6 +11594,7 @@
 	patches.kernel.org/6.12.58-035-crypto-aspeed-fix-double-free-caused-by-devm.patch
 	patches.kernel.org/6.12.58-036-ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-o.patch
 	patches.kernel.org/6.12.58-037-ASoC-Intel-avs-Disable-periods-elapsed-work-w.patch
+	patches.kernel.org/6.12.58-038-ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
