ASoC: mediatek: Use SND_JACK_AVOUT for HDMI/DP jacks (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11742,6 +11742,7 @@
 	patches.kernel.org/6.12.58-183-drm-amd-pm-Use-cached-metrics-data-on-arcturu.patch
 	patches.kernel.org/6.12.58-184-drm-amdgpu-jpeg-Hold-pg_lock-before-jpeg-powe.patch
 	patches.kernel.org/6.12.58-185-drm-nouveau-replace-snprintf-with-scnprintf-i.patch
+	patches.kernel.org/6.12.58-186-ASoC-mediatek-Use-SND_JACK_AVOUT-for-HDMI-DP-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
