f2fs: fix to detect potential corrupted nid in free_nid_list (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11791,6 +11791,7 @@
 	patches.kernel.org/6.12.58-232-net-When-removing-nexthops-don-t-call-synchro.patch
 	patches.kernel.org/6.12.58-233-net-stmmac-Correctly-handle-Rx-checksum-offlo.patch
 	patches.kernel.org/6.12.58-234-net-Call-trace_sock_exceed_buf_limit-for-memc.patch
+	patches.kernel.org/6.12.58-235-f2fs-fix-to-detect-potential-corrupted-nid-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
