iommu/amd: Skip enabling command/event buffers for kdump (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11856,6 +11856,7 @@
 	patches.kernel.org/6.12.58-297-drm-xe-guc-Set-upper-limit-of-H2G-retries-ove.patch
 	patches.kernel.org/6.12.58-298-net-call-cond_resched-less-often-in-__release.patch
 	patches.kernel.org/6.12.58-299-smsc911x-add-second-read-of-EEPROM-mac-when-p.patch
+	patches.kernel.org/6.12.58-300-iommu-amd-Skip-enabling-command-event-buffers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
